<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YRParser</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_xmlparser">XMLParser</string>
    <string name="forecast_symbol">forecast_symbol</string>
    <string name="overview">Overview</string>
    <string name="sunrise_sunset">Sun</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="current_location">Current Location</string>
    <string name="favorite_star_image">Favorite star image</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="enter_a_location_description">Enter a location description</string>
    <string name="confirm">Confirm</string>
    <string name="no_locations">No locations</string>
    <string name="delete_location">Delete location</string>
    <string name="insert_favorite_location">Add location</string>
    <string name="favorite_location">Favorite location</string>
    <string name="use_this_location">Use this location</string>
</resources>
