<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/overview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/overview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/overview_symbol"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/overview_header"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/forecast_symbol"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/overview_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/overview_symbol"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_below="@id/overview_info" />

    <TextView
        android:id="@+id/sun_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sunrise_sunset"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/sunrise_symbol"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/sun_header"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/forecast_symbol"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/sunrise_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/sunrise_symbol"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sunset_symbol"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/sunrise_symbol"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/forecast_symbol"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/sunset_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/sunset_symbol"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

</RelativeLayout>