<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/overview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/overview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/overview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_header"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/overview_symbol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/forecast_symbol"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/sym_01d" />

        <TextView
            android:id="@+id/overview_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="overview info 1"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        style="@style/HorizontalDivider"
        android:layout_below="@id/overview_layout" />

    <View
        android:id="@+id/divider2"
        style="@style/VerticalDivider"
        android:layout_below="@id/divider"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/sunview_col1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_toLeftOf="@id/divider2"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/sunrise_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sunrise"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/sunrise_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/forecast_symbol"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/sym_01d" />

        <TextView
            android:id="@+id/sunrise_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="overview info 1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sunview_col2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_toRightOf="@id/divider2"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/sunset_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sunset"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/sunset_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/forecast_symbol"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/sym_01d" />

        <TextView
            android:id="@+id/sunset_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="overview info 2"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>